# cpp_cmake_template

./: CMakeLists.txt
src/: CMakeLists.txt
src/day_one/: CMakeLists.txt  day_one.cpp
